# llm-engineering-lab

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
notebooks/: 00_environment_check.ipynb  01_llm_foundations.ipynb  02_huggingFace_on_google_colab.ipynb
utils/: webscraper.py
